--- a/index.html
+++ b/index.html
@@ -96,9 +96,12 @@
             </div>
         </section>
         <footer>
-            <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
+            <h2>ohmyfood</h2>
             <ul>
-                <li></li>
+                <li><a href="#"><i class="fa fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fa fa-hands-helping"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="mailto:ohmyfood@ohmyfood.fr">Contact</a></li>
             </ul>
         </footer>
     </body>
