--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="lesresto">
             <h2 id="Restaurants">Restaurants</h2>
             <div class="resto">
-                <a href="#">
+                <a href="./restaurant/La_palette_du_gout.html">
                     <div class="imageresto">
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"><p>Nouveau</p>
                     </div>
@@ -57,7 +57,7 @@
                         <i class="far fa-heart"></i>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./restaurant/La_note_enchantée.html">
                     <div class="imageresto">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"><p>Nouveau</p>
                     </div>
@@ -69,7 +69,7 @@
                         <i class="far fa-heart"></i>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./restaurant/A_la_française.html">
                     <div class="imageresto">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                     </div>
@@ -81,7 +81,7 @@
                         <i class="far fa-heart"></i>
                     </div>
                 </a>
-                <a href="#">
+                <a href="./restaurant/Le_délice_des_sens.html">
                     <div class="imageresto">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                     </div>
