ecriture css de la version tablette et desktop

--- a/index.html
+++ b/index.html
@@ -18,29 +18,31 @@
         <header>
             <img src="images/logo/ohmyfood.png" alt="logo">
         </header>
-        <nav>
-            <div class="ville">
-                <p><i class="fa fa-map-marker-alt"></i>Paris, Belleville</p>
-            </div>
-            <div class="intro">
-                <h1>Réservez le menu qui<br> vous convient</h1>
-                <p>Découvrez des restaurants d'exception,<br> séléctionnés par nos soins.</p>
-            </div>
-            <div class="liennav">
-                <a href="#Restaurants" class="btnnav">
-                    Explorer nos restaurants
-                </a>
-            </div>
-        </nav>
-        <section>
-            <div class="fonctionnement">
-                <h2>Fonctionnement</h2>
-                <ul>
-                    <li><p>1</p><i class="fa fa-mobile-alt"></i>Choisissez un restaurant</li>
-                    <li><p>2</p><i class="fa fa-list-ul"></i>Composez votre menu</li>
-                    <li><p>3</p><i class="fa fa-store"></i>Dégustez au restaurant</li>
-                </ul>
-            </div>
+        <section class="desktop">
+            <nav>
+                <div class="ville">
+                    <p><i class="fa fa-map-marker-alt"></i>Paris, Belleville</p>
+                </div>
+                <div class="intro">
+                    <h1>Réservez le menu qui<br> vous convient</h1>
+                    <p>Découvrez des restaurants d'exception,<br> séléctionnés par nos soins.</p>
+                </div>
+                <div class="liennav">
+                    <a href="#Restaurants" class="btnnav">
+                        Explorer nos restaurants
+                    </a>
+                </div>
+            </nav>
+            <section class="fonction">
+                <div class="fonctionnement">
+                    <h2>Fonctionnement</h2>
+                    <ul>
+                        <li><p>1</p><i class="fa fa-mobile-alt"></i>Choisissez un restaurant</li>
+                        <li><p>2</p><i class="fa fa-list-ul"></i>Composez votre menu</li>
+                        <li><p>3</p><i class="fa fa-store"></i>Dégustez au restaurant</li>
+                    </ul>
+                </div>
+            </section>
         </section>
         <section class="lesresto">
             <h2 id="Restaurants">Restaurants</h2>
@@ -87,7 +89,7 @@
                     </div>
                     <div class="info">
                         <div class="texte">
-                            <h3>La palette du goût</h3>
+                            <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
                         <i class="far fa-heart"></i>
