--- a/restaurant/Le_délice_des_sens.html
+++ b/restaurant/Le_délice_des_sens.html
@@ -28,46 +28,64 @@
             <section class="entrées">
                 <h2>Entrées</h2>
                 <div class="selection">
-                    <h3>Tartare de thon</h3>
-                    <div class="commentaire"><p>Assaisonné au yuzu</p><p class="prix">25€</p></div>
+                    <a href="#">
+                        <h3>Tartare de thon</h3>
+                        <div class="commentaire"><p>Assaisonné au yuzu</p><p class="prix">25€</p></div>
+                    </a>
                 </div>
                 <div class="selection">
-                    <h3>Bouchée de homard croustillant</h3>
-                    <div class="commentaire"><p>Et sa farandole de petits légumes</p><p class="prix">35€</p></div>
+                    <a href="#">
+                        <h3>Bouchée de homard croustillant</h3>
+                        <div class="commentaire"><p>Et sa farandole de petits légumes</p><p class="prix">35€</p></div>
+                    </a>
                 </div>
                 <div class="selection">
-                    <h3>Velouté de cèpes</h3>
-                    <div class="commentaire"><p>Aux truffes</p><p class="prix">20€</p></div>
+                    <a href="#">
+                        <h3>Velouté de cèpes</h3>
+                        <div class="commentaire"><p>Aux truffes</p><p class="prix">20€</p></div>
+                    </a>
                 </div>
             </section>
             <section class="plats">
                 <h2>Plats</h2>
                 <div class="selection">
-                    <h3>Poulet rôti aux herbes de Provence</h3>
-                    <div class="commentaire"><p>Et sa crême de truffe</p><p class="prix">40€</p></div>
+                    <a href="#">
+                        <h3>Poulet rôti aux herbes de Provence</h3>
+                        <div class="commentaire"><p>Et sa crême de truffe</p><p class="prix">40€</p></div>
+                    </a>
                 </div>
                 <div class="selection">
-                    <h3>Langouste rôtie</h3>
-                    <div class="commentaire"><p>Et ses légumes de saison</p><p class="prix">35€</p></div>
+                    <a href="#">
+                        <h3>Langouste rôtie</h3>
+                        <div class="commentaire"><p>Et ses légumes de saison</p><p class="prix">35€</p></div>
+                    </a>
                 </div>
                 <div class="selection">
-                    <h3>Côte de boeuf Angus</h3>
-                    <div class="commentaire"><p>Et sa purée de panais</p><p class="prix">44€</p></div>
+                    <a href="#">
+                        <h3>Côte de boeuf Angus</h3>
+                        <div class="commentaire"><p>Et sa purée de panais</p><p class="prix">44€</p></div>
+                    </a>
                 </div>
             </section>
             <section class="desserts">
                 <h2>Desserts</h2>
                 <div class="selection">
-                    <h3>Farandole de desserts</h3>
-                    <div class="commentaire"><p>Du chef</p><p class="prix">18€</p></div>
+                    <a href="#">
+                        <h3>Farandole de desserts</h3>
+                        <div class="commentaire"><p>Du chef</p><p class="prix">18€</p></div>
+                    </a>
                 </div>
                 <div class="selection">
-                    <h3>Crème brulée</h3>
-                    <div class="commentaire"><p>Revisitée</p><p class="prix">22€</p></div>
+                    <a href="#">
+                        <h3>Crème brulée</h3>
+                        <div class="commentaire"><p>Revisitée</p><p class="prix">22€</p></div>
+                    </a>
                 </div>
                 <div class="selection">
-                    <h3>Tiramisu</h3>
-                    <div class="commentaire"><p>À la noisette</p><p class="prix">23€</p></div>
+                    <a href="#">
+                        <h3>Tiramisu</h3>
+                        <div class="commentaire"><p>À la noisette</p><p class="prix">23€</p></div>
+                    </a>
                 </div>
             </section>
             <section class="btncom">
