modification suite controle validateur

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <img src="images/logo/ohmyfood.png" alt="logo">
         </header>
-        <section class="desktop">
+        <div class="desktop">
             <nav>
                 <div class="ville">
                     <p><i class="fa fa-map-marker-alt"></i>Paris, Belleville</p>
@@ -43,7 +43,7 @@
                     </ul>
                 </div>
             </section>
-        </section>
+        </div>
         <section class="lesresto">
             <h2 id="Restaurants">Restaurants</h2>
             <div class="resto">
@@ -56,7 +56,7 @@
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
-                        <i class="far fa-heart"></i>
+                        <i class="far fa-heart"></i><p class="coeurplein"><i class="fas fa-heart"></i></p>
                     </div>
                 </a>
                 <a href="./restaurant/La_note_enchantée.html">
