--- a/restaurant/A_la_française.html
+++ b/restaurant/A_la_française.html
@@ -17,9 +17,9 @@
         <header>
             <a href="../index.html"><i class="fa fa-arrow-left"></i></a><img src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
         </header>
-        <section class="image">
+        <div class="image">
             <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-        </section>
+        </div>
         <main>
             <section class="titre">
                 <h1>À la française</h1>
@@ -88,9 +88,9 @@
                     </a>
                 </div>
             </section>
-            <section class="btncom">
+            <div class="btncom">
                 <a href="#">Commander</a>
-            </section>
+            </div>
         </main>
         <footer>
             <h2>ohmyfood</h2>
