--- a/restaurant/La_note_enchantée.html
+++ b/restaurant/La_note_enchantée.html
@@ -17,9 +17,9 @@
         <header>
             <a href="../index.html"><i class="fa fa-arrow-left"></i></a><img src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
         </header>
-        <section class="image">
+        <div class="image">
             <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-        </section>
+        </div>
         <main>
             <section class="titre">
                 <h1>La note enchantée</h1>
@@ -94,9 +94,9 @@
                     </a>
                 </div>
             </section>
-            <section class="btncom">
+            <div class="btncom">
                 <a href="#">Commander</a>
-            </section>
+            </div>
         </main>
         <footer>
             <h2>ohmyfood</h2>
