--- a/restaurant/La_palette_du_gout.html
+++ b/restaurant/La_palette_du_gout.html
@@ -17,9 +17,9 @@
         <header>
             <a href="../index.html"><i class="fa fa-arrow-left"></i></a><img src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
         </header>
-        <section class="image">
+        <div class="image">
             <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-        </section>
+        </div>
         <main>
             <section class="titre">
                 <h1>La palette du goût</h1>
@@ -88,9 +88,9 @@
                     </a>
                 </div>
             </section>
-            <section class="btncom">
+            <div class="btncom">
                 <a href="#">Commander</a>
-            </section>
+            </div>
         </main>
         <footer>
             <h2>ohmyfood</h2>
