--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/prefixed/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
