--- a/restaurant/La_palette_du_gout.html
+++ b/restaurant/La_palette_du_gout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/prefixed/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="stylesheet" href="../fontawesome-free-5.15.4-web/css/all.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,8 @@
                 <i class="far fa-heart"></i>
             </section>
             <section class="entrées">
-                <h2>Entrées</h2>
+                <h2>ENTRÉES</h2>
+                <div class="trait"></div>
                 <div class="selection1">
                     <a href="#">
                         <div class="intitule">
@@ -56,7 +57,8 @@
                 </div>
             </section>
             <section class="plats">
-                <h2>Plats</h2>
+                <h2>PLATS</h2>
+                <div class="trait"></div>
                 <div class="selection1">
                     <a href="#">
                         <div class="intitule">
@@ -86,7 +88,8 @@
                 </div>
             </section>
             <section class="desserts">
-                <h2>Desserts</h2>
+                <h2>DESSERTS</h2>
+                <div class="trait"></div>
                 <div class="selection1">
                     <a href="#">
                         <div class="intitule">
