--- a/restaurant/La_palette_du_gout.html
+++ b/restaurant/La_palette_du_gout.html
@@ -32,7 +32,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Fricassée d'escargot</h3>
-                            <div class="commentaire"><p>Au piment d'espelette</p><p class="prix">25€</p></div>
+                            <div class="commentaire"><p class="com">Au piment d'espelette</p><p class="prix">25€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -41,7 +41,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Foie gras de canard mi-cuit</h3>
-                            <div class="commentaire"><p>Et ses copeaux de truffe noire</p><p class="prix">35€</p></div>
+                            <div class="commentaire"><p class="com">Et ses copeaux de truffe noire</p><p class="prix">35€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -50,7 +50,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Oeuf au plat</h3>
-                            <div class="commentaire"><p>Assaisonné à la truffe sur lit de caviar</p><p class="prix">20€</p></div>
+                            <div class="commentaire"><p class="com">Assaisonné à la truffe sur lit de caviar</p><p class="prix">20€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -63,7 +63,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Filet de boeuf aux herbes</h3>
-                            <div class="commentaire"><p>Accompagné de sa ribambelle de légumes</p><p class="prix">40€</p></div>
+                            <div class="commentaire"><p class="com">Accompagné de sa ribambelle de légumes</p><p class="prix">40€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -72,7 +72,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Parmentier de queue de boeuf</h3>
-                            <div class="commentaire"><p>À la truffe noire sur sa purée de panais</p><p class="prix">35€</p></div>
+                            <div class="commentaire"><p class="com">À la truffe noire sur sa purée de panais</p><p class="prix">35€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -81,7 +81,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Filet de turbot</h3>
-                            <div class="commentaire"><p>Aux agrumes</p><p class="prix">44€</p></div>
+                            <div class="commentaire"><p class="com">Aux agrumes</p><p class="prix">44€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -94,7 +94,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Paris-Brest</h3>
-                            <div class="commentaire"><p>Revisité</p><p class="prix">18€</p></div>
+                            <div class="commentaire"><p class="com">Revisité</p><p class="prix">18€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -103,7 +103,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Macaron au chocolat d'exception</h3>
-                            <div class="commentaire"><p>Et glace à la vanille de Madagascar</p><p class="prix">22€</p></div>
+                            <div class="commentaire"><p class="com">Et glace à la vanille de Madagascar</p><p class="prix">22€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -112,7 +112,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Mousse au chocolat</h3>
-                            <div class="commentaire"><p>Au piment d'Espelette et à la truffe noire</p><p class="prix">23€</p></div>
+                            <div class="commentaire"><p class="com">Au piment d'Espelette et à la truffe noire</p><p class="prix">23€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
