--- a/restaurant/Le_délice_des_sens.html
+++ b/restaurant/Le_délice_des_sens.html
@@ -32,7 +32,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Tartare de thon</h3>
-                            <div class="commentaire"><p>Assaisonné au yuzu</p><p class="prix">25€</p></div>
+                            <div class="commentaire"><p class="com">Assaisonné au yuzu</p><p class="prix">25€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -41,7 +41,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Bouchée de homard croustillant</h3>
-                            <div class="commentaire"><p>Et sa farandole de petits légumes</p><p class="prix">35€</p></div>
+                            <div class="commentaire"><p class="com">Et sa farandole de petits légumes</p><p class="prix">35€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -50,7 +50,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Velouté de cèpes</h3>
-                            <div class="commentaire"><p>Aux truffes</p><p class="prix">20€</p></div>
+                            <div class="commentaire"><p class="com">Aux truffes</p><p class="prix">20€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -63,7 +63,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Poulet rôti aux herbes de Provence</h3>
-                            <div class="commentaire"><p>Et sa crême de truffe</p><p class="prix">40€</p></div>
+                            <div class="commentaire"><p class="com">Et sa crême de truffe</p><p class="prix">40€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -72,7 +72,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Langouste rôtie</h3>
-                            <div class="commentaire"><p>Et ses légumes de saison</p><p class="prix">35€</p></div>
+                            <div class="commentaire"><p class="com">Et ses légumes de saison</p><p class="prix">35€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -81,7 +81,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Côte de boeuf Angus</h3>
-                            <div class="commentaire"><p>Et sa purée de panais</p><p class="prix">44€</p></div>
+                            <div class="commentaire"><p class="com">Et sa purée de panais</p><p class="prix">44€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -94,7 +94,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Farandole de desserts</h3>
-                            <div class="commentaire"><p>Du chef</p><p class="prix">18€</p></div>
+                            <div class="commentaire"><p class="com">Du chef</p><p class="prix">18€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -103,7 +103,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Crème brulée</h3>
-                            <div class="commentaire"><p>Revisitée</p><p class="prix">22€</p></div>
+                            <div class="commentaire"><p class="com">Revisitée</p><p class="prix">22€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
@@ -112,7 +112,7 @@
                     <a href="#">
                         <div class="intitule">
                             <h3>Tiramisu</h3>
-                            <div class="commentaire"><p>À la noisette</p><p class="prix">23€</p></div>
+                            <div class="commentaire"><p class="com">À la noisette</p><p class="prix">23€</p></div>
                         </div>
                         <div class="choix"><i class="fas fa-check-circle"></i></div>
                     </a>
